tests/test_data/istio/expected/extensions/v1beta1/Ingress/chartmuseum.yaml
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-ing.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: chartmuseum
spec:
  rules:
  - host: chartmuseum-jx.mydomain.com
    http:
      paths:
      - backend:
          serviceName: jenkins-x-chartmuseum
          servicePort: 8080
  tls:
  - hosts:
    - chartmuseum-jx.mydomain.com
    secretName: "my-ingress-secret"
